--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -22,6 +22,9 @@ dependencies = [
     "sentence-transformers>=3.0",  # For local BGE-M3 embeddings
     "gradio>=5.0",
     "httpx>=0.27",
+    "beautifulsoup4>=4.12",
+    "lxml>=5.2",
+    "playwright>=1.42",
     "matplotlib>=3.8.0",
     "python-dotenv",
 ]
