--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,6 +7,8 @@ OPENAI_API_KEY=your-openai-api-key  # Optional, for text-embedding-3-small
 ## LLM Settings
 LLM_MODEL=gemini-2.0-flash-001  # or gemini-2.0-pro-exp
 LLM_TEMPERATURE=0.5
+REPORT_ANALYSIS_MODEL=gemini-3-pro-preview
+REPORT_ANALYSIS_THINKING_BUDGET=256
 
 ## Embedding Settings
 EMBEDDING_PROVIDER=local  # "local" (BGE-M3) or "openai" (text-embedding-3-small)
