Add regional targeting and shared demographics across analyses

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "pydantic-settings",
     "pandas>=2.0",
     "pytz",
+    "plotly>=5.20",
     "google-genai>=1.50",  # New Gemini SDK
     "openai>=1.50",
     "sentence-transformers>=3.0",  # For local MiniLM embeddings
