Pre-calibration baseline: SSR tuning tooling, defaults, and env template cleanup

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,7 +5,12 @@ GOOGLE_API_KEY=your-google-api-key
 OPENAI_API_KEY=your-openai-api-key  # Optional, for text-embedding-3-small
 
 ## LLM Settings
-LLM_MODEL=gemini-2.0-flash-001  # or gemini-2.0-pro-exp
+LLM_MODEL=gemini-3-flash-preview
+RESEARCH_LLM_MODEL=gemini-2.5-flash-lite
+RESEARCH_INTERPRETATION_MODEL=gemini-3-flash-preview
+# Optional research fallbacks
+# RESEARCH_PLAYWRIGHT_FALLBACK_LIMIT=2
+# RESEARCH_PLAYWRIGHT_TIMEOUT_MS=15000
 LLM_TEMPERATURE=0.5
 REPORT_ANALYSIS_MODEL=gemini-3-pro-preview
 REPORT_ANALYSIS_THINKING_BUDGET=256
@@ -13,6 +18,8 @@ REPORT_ANALYSIS_THINKING_BUDGET=256
 ## Embedding Settings
 EMBEDDING_PROVIDER=local  # "local" (BGE-M3) or "openai" (text-embedding-3-small)
 EMBEDDING_MODEL=BAAI/bge-m3
+SSR_TEMPERATURE=0.7
+SSR_EPSILON=0.0
 
 ## Database
 DATABASE_URL=sqlite+aiosqlite:///./market_wizard.db
