Stage 1 calibration: add domain policy runtime and external readiness validation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -18,8 +18,11 @@ REPORT_ANALYSIS_THINKING_BUDGET=256
 ## Embedding Settings
 EMBEDDING_PROVIDER=local  # "local" (BGE-M3) or "openai" (text-embedding-3-small)
 EMBEDDING_MODEL=BAAI/bge-m3
-SSR_TEMPERATURE=0.7
+SSR_TEMPERATURE=1.0
 SSR_EPSILON=0.0
+SSR_CALIBRATION_ENABLED=true
+SSR_CALIBRATION_ARTIFACT_PATH=backend/app/data/ssr_calibrator_default.json
+SSR_CALIBRATION_POLICY_PATH=backend/app/data/ssr_calibration_policy_default.json
 
 ## Database
 DATABASE_URL=sqlite+aiosqlite:///./market_wizard.db
