Document local reference paper context and ignore .local_context

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,6 @@ temp_development_files/
 
 # Local report outputs
 reports/
+
+# Local contextual materials (papers, notes, scratch files)
+.local_context/
